# Entretiens-Cohort360

./: .gitignore  README.md  docker-compose.yml
Exercice_Django/: .dockerignore  .env.example  Dockerfile  README.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
Exercice_Django/config/: pagination.py  settings.py  urls.py
Exercice_Django/medical/: urls.py
Exercice_Django/medical/filters/: __init__.py  medication.py  patient.py  prescription.py
Exercice_Django/medical/management/commands/: seed_demo.py
Exercice_Django/medical/migrations/: 0001_initial.py  0002_prescription.py  0003_rename_medical_pre_patient_idx_medical_pre_patient_236837_idx_and_more.py  0004_alter_medication_options_alter_patient_options_and_more.py
Exercice_Django/medical/models/: __init__.py  medication.py  patient.py  prescription.py
Exercice_Django/medical/serializers/: __init__.py  medication.py  patient.py  prescription.py
Exercice_Django/medical/tests/: factories.py
Exercice_Django/medical/tests/medicaments/: conftest.py
Exercice_Django/medical/tests/medicaments/unit/: test_filters.py  test_models.py  test_serializers.py  test_views.py
Exercice_Django/medical/tests/patients/: conftest.py
Exercice_Django/medical/tests/patients/unit/: test_filters.py  test_models.py  test_serializers.py  test_views.py
Exercice_Django/medical/tests/prescriptions/: conftest.py
Exercice_Django/medical/tests/prescriptions/integration/: test_integration.py
Exercice_Django/medical/tests/prescriptions/unit/: test_filters.py  test_models.py  test_serializers.py  test_views.py
Exercice_Django/medical/views/: __init__.py  medication.py  patient.py  prescription.py
Exercice_Front/: .env.example  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
Exercice_Front/src/: App.tsx  index.css  main.tsx
Exercice_Front/src/__tests__/: App.test.tsx
Exercice_Front/src/components/: ConfirmModal.tsx  ErrorBoundary.tsx  PrescriptionFilters.tsx  PrescriptionForm.tsx  PrescriptionList.tsx
(+25 files in other folders)
